--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 						<image>registry.cn-beijing.aliyuncs.com/hcloud/oraclejdk8</image>
 					</from>
 					<to>
-						<image>registry.cn-hangzhou.aliyuncs.com/lianggzone/jib-helloworld:v1</image>
+						<image>registry.cn-beijing.aliyuncs.com/tdfcloud/jib:v1</image>
 					</to>
 					<container>
 						<jvmFlags>
